--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -45,3 +45,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: 'trivy-results.sarif'
+      - name: Runs dockle
+        uses: hands-lab/dockle-action@v1
+        with:
+          image: docker.io/my-organization/my-app:${{ github.sha }}
