--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -40,12 +40,10 @@ jobs:
           template: '@/contrib/sarif.tpl'
           output: 'trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
+          exit-code: '1'
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: 'trivy-results.sarif'
-      - name: Runs dockle
-        uses: hands-lab/dockle-action@v1
-        with:
-          image: docker.io/my-organization/my-app:${{ github.sha }}
+     
